k8s/manifests/psa-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    # Enforce Kubernetes Pod Security Admission (Restricted)
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/audit: "restricted"
    pod-security.kubernetes.io/warn: "restricted"
